# quickpat

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  quickpat.sh  quickpat.yaml.sample
.github/workflows/: generate-patterns.yml
docs/: compose-tutorial.md  decision-points.md  dminnear-rag-reference.md  email-drew-patternizer-impact.md  email-drew-skills-response.md  ignore-differences-scope.md  orchestration-plan.md  plan.md  pub-integration-plan.md  refactor-plan.md  shared-charts-analysis.md
examples/: lemonade-stand-compose.yaml  sample-spec.yaml
quickpat/: __init__.py  analyzer.py  cli.py  config.py  generator.py  llm.py  operators.py  pipeline.py  profile.py  readiness.py  registry.py  spec.py  subchart.py  transformer.py  validator.py
quickpat/compose/: __init__.py  block_templates.py  blocks.py  compiler.py  parser.py  qs_generator.py  renderer.py
quickpat/providers/: __init__.py  anthropic.py  base.py  deepinfra.py  factory.py  ollama.py  openai.py  vllm.py
scripts/: run_eval.py
skills/: README.md  skill_validate.py  transform_quickstart.md  transform_quickstart.py
tests/: conftest.py  test_analyzer.py  test_compose_app_spec.py  test_compose_qs.py  test_config.py  test_generator.py  test_llm_hooks.py  test_operators.py  test_pipeline_remote.py  test_profile.py  test_readiness.py  test_spec.py  test_subchart.py  test_transformer.py  test_validator.py
tests/eval/: baseline.jsonl  conftest.py  test_eval.py  test_regression.py
tests/fixtures/: lemonade-stand-compose.yaml
