[project]
name = "quickpat"
version = "0.1.0"
description = "Convert AI Quickstarts into Validated Patterns"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]

[project.scripts]
quickpat = "quickpat.cli:main"

[dependency-groups]
dev = ["pytest>=9.0.3", "pre-commit>=3.0"]

[tool.pytest.ini_options]
markers = [
    "eval: full pipeline evaluation tests (deselect with '-m not eval')",
]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
